Fix: Align the content area with nav and bread-crumbs
Change social medias from png to svg and footer component from Astro to react for better client rendering

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -324,9 +324,13 @@ select{
   }
   a{
     color:var(--brand-stroke);
-    text-decoration-thickness:2px;
+    text-decoration-thickness:4px;
     text-underline-offset:2px;
     text-decoration-color: var(--brand-accent);
+  }
+
+  ul ::marker {
+    color: var(--brand-fill);
   }
 
   /* a:visited, a:hover{
